--- a/prioritizer-web/package.json
+++ b/prioritizer-web/package.json
@@ -18,6 +18,8 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "yup": "^1.4.0"
   },
