--- a/prioritizer-web/package.json
+++ b/prioritizer-web/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
