--- a/prioritizer-web/package.json
+++ b/prioritizer-web/package.json
@@ -17,10 +17,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
-    "date-fns": "^4.1.0",
+    "@types/react-datepicker": "^7.0.0",
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.27.0",
